# whisper-writer

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.py  start.vbs
.github/workflows/: build-release.yml
docs/: macos.md
examples/: regex-find-replace.json  simple-find-replace.txt
src/: config_schema.yaml  entry_point.py  errors.py  input_simulation.py  key_listener.py  keyring_manager.py  llm_processor.py  main.py  media_controller.py  paths.py  result_thread.py  text_processor.py  transcription.py  transcription_history.py  utils.py
src/ui/: model_refresh_worker.py  settings_window.py  status_window.py
